--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ install:
 script:
   - pytest CorrPy/test/test_std_plus.py
   - pytest CorrPy/test/test_corr_plus.py
-  - pytest CorrPy/test/text_cov_mx.py
+  - pytest CorrPy/test/test_cov_mx.py
